fix sidebar highlight error + wrap hyperlink

--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -149,6 +149,9 @@ li a.active {
 
 /*--- content column ---*/
 
+.column.content a {
+	overflow-wrap: anywhere;
+}
 /*.main-with-sidebar div.wrapper{
 	margin-left: 0;
 }*/
